--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -9,13 +9,14 @@
 <div class="container yazi mgen">
     <h3>GİRİŞ</h3>
     <p>
-    Bauhausla birlikte modern tasarım anlayışının temelleri atılmaya başlanmış; süsleme yanlış bulunmuş ve yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım  yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
-<br><br>
+    Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım  yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
+    <br><br>
     Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar, yaptığımız işlemi gerçekleştirmede birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken teknolojik olanaklardan maksimum doğrultuda yararlanılarak ilerlenecektir. 
-<br><br>
+    <br><br>
     Bir tasarımın oluşumu doğrultusunda geçmişten alınan tüm birikim değerlendirilerek çalışmanın yanı sıra en gerçek yaratımın analizi yapılacaktır. Buradan alınan bilgiler doğrultusunda günümüz dünyasına çözümler sunulmuş olacaktır.
-<br><br>
+    <br><br>
     Öyleyse yaptığımız işin bilincine varalım ve yarının dünyasının yaratılmasına yardımcı olalım.
 </p>
+<p style="text-align: right;" class="yazar">Atahan Göktürk Güner</p>
 </div>
 
