--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -1,22 +1,51 @@
 {{ partial "head.html" . }}
+{{ partial "header.html" . }}
 
-<header>
-
-    <div class="logo"></div>
-
-</header>
-
-<div class="container yazi mgen">
-    <h3>GİRİŞ</h3>
-    <p>
-    Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım  yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
-    <br><br>
-    Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar, yaptığımız işlemi gerçekleştirmede birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken teknolojik olanaklardan maksimum doğrultuda yararlanılarak ilerlenecektir. 
-    <br><br>
-    Bir tasarımın oluşumu doğrultusunda geçmişten alınan tüm birikim değerlendirilerek çalışmanın yanı sıra en gerçek yaratımın analizi yapılacaktır. Buradan alınan bilgiler doğrultusunda günümüz dünyasına çözümler sunulmuş olacaktır.
-    <br><br>
-    Öyleyse yaptığımız işin bilincine varalım ve yarının dünyasının yaratılmasına yardımcı olalım.
-</p>
-<p style="text-align: right;" class="yazar">Atahan Göktürk Güner</p>
+<!--
+<div class="container">
+<div style=" text-align: center; font-family: playfair display; font-size: 24px;">
+<div style="margin-bottom: 10px;"></div>
+        <div class="row d-flex justify-content-center">
+{{ $paginator := .Paginate (where .Pages ".Params.type" "kapak") (index .Site.Params "paginate" | default 10) }}
+{{ if gt $paginator.TotalPages 0 }}
+{{ range $index, $page := $paginator.Pages }}
+{{ if and $.IsHome (eq $paginator.PageNumber 1) (eq $index 0) }}
+{{ end }}
+<div class="post {{ .Scratch.Get `postClass` }} col-lg-4 col-md-6 col-sm-12">
+        <a href="{{ .Permalink }}"><div class="shadow-lg "> <h1 class="logokapak" style="color: {{ .Params.renk }};">MARKUT</h1>
+            <h2 class="postyazi" style="color: {{ .Params.renk }};">{{.Title}}</h2>
+    <div class="bg postkapak" style="background-image: url({{ .Params.kapakphone }});"></div>
+    <div class="postdate"> 
+            <p class="float-left posttarih" style="color: {{ .Params.renk }};">{{.Params.Tarih}}</p>
+            <h2  class="postsayi" style="color: {{ .Params.renk }};">Sayı {{ .Params.sayi }}</h2>    
+        </div>
+    </div></a>
 </div>
+{{ end }}{{ end }}</div></div>
+-->
 
+<div class="container sayilar">
+        {{ $paginator := .Paginate (where .Pages ".Params.type" "kapak") (index .Site.Params "paginate" | default 10) }}
+        {{ if gt $paginator.TotalPages 0 }}
+        {{ range $index, $page := $paginator.Pages }}
+        {{ if and $.IsHome (eq $paginator.PageNumber 1) (eq $index 0) }}
+        {{ end }}
+        <div class="row markutsayi post {{ .Scratch.Get `postClass` }}">
+                <div class="col-md-6">
+                <div class="markutcvr">
+                        <a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.kapak}}" alt=""></a>
+                </div>
+                </div>
+                <div class="col-md-6">
+                        <div class="icindekiler">içindekiler.</div>
+                        <ul class="list-group">
+                        {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}  
+                        <li class="list-group-item contents">{{ .Title | markdownify }}</li>                        
+                        {{ end }}
+                        </ul><a href="{{ .Permalink }}">
+                        <button class="btn markutbtn" type="button">sayıyı oku</button></a>
+                </div>
+        </div>
+        {{ end }}{{ end }}
+</div>
+{{ partial "footer.html" . }}
