--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -1,10 +1,10 @@
-body{
- 
-}
-html {
-	scroll-snap-type: proximity;
-	scroll-snap-type: y proximity;
-	scroll-padding: 55px;  
+@media screen and (min-width: 768px){
+	html {
+		scroll-snap-type: proximity;
+		scroll-snap-points-y: repeat(50px);
+		scroll-snap-type: y proximity;
+		scroll-padding: 55px;  
+	}
 }
 
 div{
