--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -1,42 +1,37 @@
-
+<div class="container mgen">
+        <br><br><br> <h3>Son Gelen Yorumlar</h3><hr>
 {{$postid:= .Params.postid}}
-{{ $gistJ := getJSON "https://getsimpleform.com/messages.json?api_token=040444412275994b93e8893d8cd9c54d" }}
+{{ $gistJ := getJSON "https://getsimpleform.com/messages.json?api_token=7dc3fb305c1a7e75a2f26a86535f9974" }}
 {{ range $gistJ }}
 {{ if eq .data.post_id $postid }}
-
         {{ if not .data.reply_to }}
-
-<p style="margin-top: 20px; font-weight: bold;font-size: 14px; ">{{ .data.name }} <span style="font-size: 13px; font-weight: 100;">{{ dateFormat "02 January 2006" .created_at }}</span></p> 
-    
-<p style=" font-size: 16px;">{{ .data.message  }} </p>
+<b>{{ .data.name }} <span style="font-size: 13px; font-weight: 100;">  |  {{ dateFormat "02 January 2006" .created_at }}</span></b> 
+<p style=" font-size: 16px; margin-top: 5px;">{{ .data.message  }} </p>
 <div class="comment_reply">
-    <a id="{{ .id }}" href="#comment-form" onclick="changeValue('reply_to', 'yes'); changeValue('parrent_name', '{{.data.name}}'); changeValue('parrent_time','{{.created_at}}')">Yanıtla</a>
+    <a id="{{ .id }}" class="yanitla" href="#comment-form" onclick="changeValue('reply_to', 'yes'); changeValue('parrent_name', '{{.data.name}}'); changeValue('parrent_time','{{.created_at}}')">Yanıtla</a>
     </div>
        {{ end }}
       {{$black := .created_at}}
        {{ range sort $gistJ }}{{ if eq .data.parrent_time $black}}
        <div style="margin-left: 100px; font-size: 14px;">
-        <p style=" font-size: 16px;">{{ .data.message  }}</p>
-        <p style=" font-weight: bold;font-size: 14px; ">{{ .data.name }} <span style="font-weight: 100;">{{ dateFormat "02 January 2006" .created_at }}</span></p>  
+        <p style=" font-weight: bold;font-size: 14px; ">{{ .data.name }} <span style="font-weight: 100;">| {{ dateFormat "02 January 2006" .created_at }}</span></p>  
+        <p style=" font-size: 16px; margin-top: -10px;">{{ .data.message  }}</p>
         <br>
       </div>
        {{ end }}{{ end }}
    
  {{ end }}
-{{ end }}
-
-
-<form style="" id="comment-form" action="https://getsimpleform.com/messages?form_api_token=5d040a18df35de484e199ba1c582f467" method="post">
+{{ end }} <br>
+<form id="comment-form" action="https://getsimpleform.com/messages?form_api_token=04d0d4343419a0e7db01dd9c6e464355" method="post">
 <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
 <input type='hidden' name='post_id' value='{{ .Params.postid }}' />
 <!-- all your input fields here.... -->
-<label><input type='text' name='name' class="form-control" placeholder="Ad Soyad" required/></label>
-<label><input type='email' name='email' class="form-control" style="margin-top: 20px;" placeholder="Email" required/></label>
-<input type="hidden" id="comment-parent" name="reply_to" value="">
+<label><input type='text' name='name' class="form-control form-ad" placeholder="Ad Soyad" required/></label><br>
+<label><input type='email' name='email' class="form-control form-email" placeholder="Email" required/></label><br>
+<input type="hidden" id="comment-parent" name="reply_to" value=""><br>
 <input type="hidden" id="comment-parent" name="parrent_name" value="">
 <input type="hidden" id="comment-parent" name="parrent_time" value="">
-<label></label><textarea name="message" class="form-message" style="margin-top: 20px;" placeholder="Yorumunu yaz" required></textarea>
-
-<input type='submit' value='Gönder' class=" btn btn-dark"/>
+<textarea name="message" class="form-message form-yorum" rows="4"placeholder="Yorumunu yaz" required></textarea><br>
+<input type='submit' value='Gönder' class=" btn markutbtn"/>
 </form>
-
+</div>
