--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -21,7 +21,7 @@
               <a class="nav-link" href="/iletisim">iletişim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/hakkimizda">bize gönder</a>
+              <a class="nav-link" href="/bize-gonder">bize gönder</a>
             </li>
           </ul>
         </div>
