head ve footer da ufak değişiklik

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -16,8 +16,8 @@
     </div></footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="{{.Site.BaseURL}}/js/jquery.clever-infinite-scroll.js"></script>
-    <script src="{{.Site.BaseURL}}/bootstrap/bootstrap.min.js"></script>
+    <script src="{{.Site.BaseURL}}js/jquery.clever-infinite-scroll.js"></script>
+    <script src="{{.Site.BaseURL}}bootstrap/bootstrap.min.js"></script>
 
 <script>
     $('#contentsWrapper').cleverInfiniteScroll({
