etiketler sayfasi oluşturdum

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -3,16 +3,17 @@
         <div class="footericon"><img src="/img/logo.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
         <div class="footersur">Endüstriyel Tasarım Dergisi</div>
-        <div class="footerdesc">Markut, 2020 Ağustos ayıyla birlikte yayın hayatına başlamış online endüstriyel tasarım dergisidir. Endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak Markut.net ibaresinin geçmesi gerekmektedir.</div>
+        <div class="footerdesc">Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak Markut.net ibaresinin geçmesi gerekmektedir.</div>
         <ul class="list-inline footerlinks">
             <li class="list-inline-item"><a href="/iletisim">iletişim</a></li>
             <li class="list-inline-item"><a href="/hakkimizda">hakkımızda</a></li>
             <li class="list-inline-item"><a href="/reklam-sponsorluk">reklam ve sponsorluk</a></li>
             <li class="list-inline-item"><a href="/bize-gonder">bize gönder</a></li>
             <li class="list-inline-item"><a href="/okuyucu-sozlesmesi">okuyucu sözleşmesi</a></li>
+            <li class="list-inline-item"><a href="/tags">etiketler</a></li>
             <li class="list-inline-item"><a href="https://www.instagram.com/markutworks" target="_blank">instagram</a></li>
         </ul>
-        <div class="copyright">Markut.net | Copyright © 2020 | Markut tarafından tasarlandı.</div>
+        <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
