--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -5,13 +5,13 @@
         <div class="footersur">Endüstriyel Tasarım Dergisi</div>
         <div class="footerdesc">Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak Markut.net ibaresinin geçmesi gerekmektedir.</div>
         <ul class="list-inline footerlinks">
-            <li class="list-inline-item"><a href="/iletisim">iletişim</a></li>
-            <li class="list-inline-item"><a href="/hakkimizda">hakkımızda</a></li>
-            <li class="list-inline-item"><a href="/reklam-sponsorluk">reklam ve sponsorluk</a></li>
-            <li class="list-inline-item"><a href="/bize-gonder">bize gönder</a></li>
-            <li class="list-inline-item"><a href="/okuyucu-sozlesmesi">okuyucu sözleşmesi</a></li>
-            <li class="list-inline-item"><a href="/tags">etiketler</a></li>
-            <li class="list-inline-item"><a href="https://www.instagram.com/markutworks" target="_blank">instagram</a></li>
+            <li class="list-inline-item"><a href="/iletisim/">iletişim</a></li>
+            <li class="list-inline-item"><a href="/hakkimizda/">hakkımızda</a></li>
+            <li class="list-inline-item"><a href="/reklam-sponsorluk/">reklam ve sponsorluk</a></li>
+            <li class="list-inline-item"><a href="/bize-gonder/">bize gönder</a></li>
+            <li class="list-inline-item"><a href="/okuyucu-sozlesmesi/">okuyucu sözleşmesi</a></li>
+            <li class="list-inline-item"><a href="/tags/">etiketler</a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com/markutworks/" target="_blank">instagram</a></li>
         </ul>
         <div class="copyright"><a href="{{.Site.BaseURL}}">Markut.net</a> | Copyright © 2020 | Markut tarafından tasarlandı.</div>
     </div></footer>
