--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -35,10 +35,10 @@
         </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim">iletişim</a>
+              <a class="nav-link" href="/iletisim/">iletişim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/hakkimizda">hakkımızda</a>
+              <a class="nav-link" href="/hakkimizda/">hakkımızda</a>
             </li>
           </ul>
         </div>
