--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -12,16 +12,16 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarToggle">
           <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="/hakkimizda">hakkımızda</a>
+                  <a class="nav-link" href="/hakkimizda/">hakkımızda</a>
                 </li>
     
           </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/iletisim">iletişim</a>
+              <a class="nav-link" href="/iletisim/">iletişim</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/bize-gonder">bize gönder</a>
+              <a class="nav-link" href="/bize-gonder/">bize gönder</a>
             </li>
           </ul>
         </div>
