Seo title Ekledim

--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -3,7 +3,7 @@
         <div class="footericon"><img src="/img/logo.svg" alt="Markut Logo"></div>
         <div class="footerlogo">MARKUT</div>
         <div class="footersur">Endüstriyel Tasarım Dergisi</div>
-        <div class="footerdesc">Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak Markut.net ibaresinin geçmesi gerekmektedir.</div>
+        <p class="footerdesc">Markut, Marmara Kreatif Ürün Tasarım ekibidir. Ekibimizle Ağustos 2020'de online endüstriyel tasarım dergimizi bu platformda yayınlamaya başladık. Dergimiz, endüstri tasarımı bağlamında genel tasarım disiplinleriyle de ilişkili olarak içerikler üretmektedir. İçeriklerimizi başka platformlarda paylaşırken kaynak olarak Markut.net ibaresinin geçmesi gerekmektedir.</p>
         <ul class="list-inline footerlinks">
             <li class="list-inline-item"><a href="/iletisim/">iletişim</a></li>
             <li class="list-inline-item"><a href="/hakkimizda/">hakkımızda</a></li>
