--- a/themes/Markut/layouts/_default/single.html
+++ b/themes/Markut/layouts/_default/single.html
@@ -9,4 +9,14 @@
         </div>
         </div>
     </div>
+    <div class="mailde">
+        <img class="img-fluid" src="/img/markut-mailde.png" alt="">
+        <div class="mailde-title">Dergimize Abone Olun</div>
+        <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
+        <form name="abonelik" method="POST" data-netlify="true" action="/basarili">   
+          <label><input type="text" name="email" class="form-control form-email" placeholder="Mail Adresiniz" required></label>
+          <button type="submit" class=" btn markutbtn">Abone Ol</button><br>
+          <small>ücretsizdir.</small>
+      </form>
+      </div>
     {{ partial "footer.html" . }}
