--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -23,7 +23,12 @@
             <li class="nav-item">
               <a class="nav-link" href="/bize-gonder/">bize gönder</a>
             </li>
+            <li><div class="custom-control custom-switch">
+              <input type="checkbox" class="custom-control-input" id="darkSwitch" />
+              <label class="custom-control-label" for="darkSwitch">Dark</label>
+            </div></li>
           </ul>
+
         </div>
       </nav>
 </header>
