--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -1,9 +1,10 @@
+
 @media screen and (min-width: 768px){
 	html {
 		scroll-snap-type: proximity;
 		scroll-snap-points-y: repeat(50px);
 		scroll-snap-type: y proximity;
-		scroll-padding: 55px;  
+		scroll-padding: 60px;  
 	}
 }
 
@@ -107,7 +108,7 @@ h6 {
 	}
 }
 
-// Large devices (desktops, 62em and up)
+
 @media (min-width: 62em) {
 	html,
 	body {
@@ -115,25 +116,11 @@ h6 {
 	}
 }
 
-// Extra large devices (large desktops, 75em and up)
+
 @media (min-width: 75em) {
 	html,
 	body {
 		font-size: 18px !important;
-	}
-}
-
-// Pen Specific Styles
-.jumbotron {
-	font-size: 16px;
-	@media (min-width: 62em) {
-		font-size: 20px;
-	}
-	h1 {
-		border-bottom: 4px solid #0275d8;
-	}
-	p.lead {
-		border-radius: 4px;
 	}
 }
 
@@ -152,94 +139,13 @@ h6 {
   background-color: #eeeeee;
 }
 
-/*
-.logo{
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 64px;
-  letter-spacing: 10px;
-  text-align: center;
-  color: #000;
-}
-.markutlogo{
-  margin: 0 auto;
-  text-align: center;
-  max-width: 400px;
-}
-.description{
-  text-align: center;
-  font-size: 14px;
-  letter-spacing: 4.7px;
-  font-family: 'Roboto Condensed', sans-serif;
-  margin-top: -15px;
-}
-
-.markutbtn {
-  border-radius: 30px;
-  border-style: solid;
-  font-size: 18px;
-  padding-left: 25px;
-  padding-right: 25px;
-  font-family: 'Roboto Condensed', sans-serif;
-  background-color: #fff;
-  color: #000;
-  border-color: #000;
-}
-
-.markutbtn:hover {
-  background-color: rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
-  border-color: #000;
-}
-.markutbtn:active {
-	background-color: rgb(0, 0, 0);
-	color: rgb(255, 255, 255);
-	border-color: #000;
-  }
-.markutbtn:focus {
-	background-color: rgb(0, 0, 0);
-	color: rgb(255, 255, 255);
-	border-color: #000;
-  } 
-
-
-.orta{
-  margin: 0 auto;
-  text-align: center;
-  
-}
-.markutmenu{
-	position: -webkit-sticky;
-	position: sticky;
-	top: 0px;
-	background-color: #fff;
-	padding: 10px;
-	font-size: 20px;
-	border: 2px solid #000;
-margin-top: 50px;
-z-index: 1;
-}
-.logomenu{
-	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 16px;
-	letter-spacing: 3px;
-	text-align: center;
-	color: #000;
-	margin: 0 auto;
-
-}
-.menulinks{
-	font-size: 14px;
-margin-top: -24px;
-}
-*/
-
 .logo{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 32px;
 	letter-spacing: 8px;
 	margin-top: -22px;
 	text-align: center;
-	color: #000;
+	color: #000000;
 	position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -252,9 +158,14 @@ margin-top: -24px;
   .nav-item{
 	  font-family: 'Roboto Condensed', sans-serif;
 	  font-size: 16px;
-	  letter-spacing: 2px;
+	  letter-spacing: 1px;
 	  color: #000;
 	  padding-left: 5px
+  }
+  .custom-control-label{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 16px;
+	padding-top: 3px;
   }
   a.nav-link{
 	  color: #000;
@@ -300,7 +211,7 @@ margin-top: -24px;
 	letter-spacing: 3px;
 	border-color: #fff;
 	padding-left: 0px;
-	padding-top: 5px;
+	padding-top: 3px;
 }
 
 .markutbtn {
@@ -312,7 +223,6 @@ margin-top: -24px;
 	font-family: 'Roboto Condensed', sans-serif;
 	background-color: #fff;
 	color: #000;
-	margin-top: 10px;
 	border: 2px solid #000;
 	letter-spacing: 3px;
   }
@@ -365,14 +275,12 @@ footer a:hover{
 	font-size: 64px;
 	font-family: 'Roboto Condensed', sans-serif;
 	letter-spacing: 8px;
-	color: #000000;
 	text-align: center;
 }
 .footersur{
-	color: #000;
 	font-family: 'Roboto Condensed', sans-serif;
-	font-size: 19px;
-	letter-spacing: 2.12px;
+	font-size: 16px;
+	letter-spacing: 1.1px;
 	text-align: center;
 	margin-top: -20px;
 	margin-left: -5px;
@@ -383,12 +291,14 @@ footer a:hover{
 	max-width: 800px;
 	margin: 0 auto;
 	margin-top: 25px;
+	text-align: justify;
 }
 .footerlinks{
 	text-align: center;
 	margin: 0 auto;
 	margin-top: 25px;
 }
+
 .list-inline-item a{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 16px;
@@ -490,13 +400,42 @@ footer a:hover{
 	margin-top: 10px;
 	color: #696969;
 }
+.onde .title{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 32px;
+	letter-spacing: 2.12px;
+	margin-top: 20px;
+	margin-left: -1px;
+	line-height: 35px;
+	margin-bottom: -10px;
+	color: #000;
+	text-decoration-color: #AFAFAF;
+}
+.onde .title:hover{
+	text-decoration: underline;
+	text-decoration-color: #AFAFAF;
+}
 
+.onde .yazar{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 12px;
+	letter-spacing: 2.12px;
+	color: #696969;
+	margin-left: 1px;
+}
+.onde .desc{
+	font-size: 14px;
+	letter-spacing: 1px;
+	margin-top: 10px;
+	color: #696969;
+}
 .gecis{
 	border: 1px solid #AFAFAF;
 	width: 100%;
 	height: 70px;
-	margin-top: 55px;
-	
+	margin-top: 60px;
+	clear: both;
+    display: table;
 }
 .gecis .sayfa {
 	font-family: 'Roboto Condensed', sans-serif;
@@ -543,7 +482,13 @@ footer a:hover{
 	letter-spacing: 1px;
 	font-size: 16px;
 }
-
+.kaynak{
+	font-size: 16px;
+	line-height: 24px;
+}
+.kaynak a{
+	font-size: 14px;
+}
 .form-ad{
 	float:left;
 }
@@ -559,6 +504,17 @@ footer a:hover{
 	font-size: 12px;
 }
 @media screen and (max-width: 768px){
+	.gecis .title{
+		font-size: 18px;
+		line-break: 5px;
+		margin-top: 7px;
+	}
+	.gecis .sayfa{
+		margin-left: 30px;
+	}
+	.gecis .titya{
+		padding-left: 120px;
+	}
 	.markutcvr{
 		float: unset;
 		margin: 0 auto;
@@ -595,11 +551,18 @@ footer a:hover{
 	.form-yorum{
 		width: 300px;
 	}
+	.kaynak a{
+		font-size: 10px;
+	}
+	.kaynak{
+		font-size: 14px;
+	}
 }
 
 
 .mgen{
 	max-width: 700px;
+	margin: 0 auto;
 }
 .mauto{
 	margin: 0 auto;
@@ -614,3 +577,115 @@ footer a:hover{
 .toc article {
 	margin-top: 100px;
 }
+
+.count{
+	font-family: 'Roboto Condensed', sans-serif;
+    font-size: 32px;
+    color: #ffffff;
+    margin-top: -30px;
+    text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
+}
+
+.mailde{
+	margin: 0 auto;
+	text-align: center;
+	margin-top: 100px;
+}
+.mailde-title{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 36px;
+	color: #AFAFAF;
+	letter-spacing: 7px;
+}
+.mailde-desc{
+	font-family: 'Roboto Condensed', sans-serif;
+	font-size: 16px;
+	color: #AFAFAF;
+	letter-spacing: 7px;
+}
+.mailde .form-email{
+	margin-top: 15px;
+	border-color: #000000;
+	border-radius: 20px;
+}
+.custom-switch{
+	margin-top: 7px;
+}
+[data-theme="dark"] {
+	background-color: rgb(27, 27, 27) !important;
+	color: #eee;
+  }
+  
+  [data-theme="dark"] .bg-light {
+	background-color: #333 !important;
+  }
+  
+  [data-theme="dark"] .bg-white {
+	background-color: rgb(85, 87, 83) !important;
+  }
+  
+  [data-theme="dark"] .bg-black {
+	background-color: #eee !important;
+  }
+  [data-theme="dark"] .navbar {
+	background-color: rgb(41, 41, 41) !important;
+  }
+  [data-theme="dark"] a {
+	color: #eee;
+  }
+  [data-theme="dark"] a:hover {
+	color: #eee;
+  }
+  [data-theme="dark"] .logo {
+	color: #eee;
+  }
+
+  [data-theme="dark"] .toc .title {
+	color: #eee;
+  }
+  [data-theme="dark"] .onde .title {
+	color: #eee;
+  }
+  [data-theme="dark"] .list-group-item {
+	color: #eee;
+	background-color: transparent;
+	border: 0px;
+  }
+  [data-theme="dark"] .kapaksur {
+	color: #eee;
+  }
+  [data-theme="dark"] .kapaklogo {
+	color: #eee;
+  }
+  [data-theme="dark"] .markutbtn {
+	background-color: transparent;
+	color: #eee;
+    border: 2px solid #eee
+  }
+  [data-theme="dark"] .markutbtn:hover {
+	background-color: #AFAFAF;
+	color: #000000;
+  }
+  [data-theme="dark"] .gecis .sayfa {
+	color: #000000;
+  }
+  [data-theme="dark"] .dropdown-menu {
+	background-color: #000000;
+  }
+  [data-theme="dark"] .icsay {
+	color: #000000;
+  }
+  [data-theme="dark"] .navbar-toggler {
+	color: #eee;
+	border: 1px solid #eee;
+  }
+  [data-theme="dark"] .form-control {
+	color: #eee;
+	background-color: transparent;
+	border: 1px solid #eee;
+  }
+  [data-theme="dark"] textarea {
+	color: #eee;
+	background-color: transparent;
+	border: 1px solid #eee;
+  }
