--- a/themes/Markut/layouts/partials/footer.html
+++ b/themes/Markut/layouts/partials/footer.html
@@ -28,14 +28,13 @@
         return true;
       });
     });</script>
-    <!--
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'UA-122967892-3');
-</script>-->
+</script>
 <script src="{{.Site.BaseURL}}js/jquery.clever-infinite-scroll.js"></script>
 <script src="{{.Site.BaseURL}}js/dark-mode-switch.min.js"></script>
 <script>
