--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -8,7 +8,7 @@
           <button type="submit" class=" btn markutbtn">Abone Ol</button><br>
           <small>ücretsizdir.</small>
       </form>
-</div>
+</div><br><br><br>
 <div class="container mgen mt-5">
 {{$link := .Permalink}}
 {{$url := "https://docs.google.com/spreadsheets/d/e/2PACX-1vSBPLcLutIQpYYppho3BFaH2K3gkaDi4rpr3L4GaFlkiAbyEp8xHSNWQ7G5DTp5dcNdOwM9D0ycZvTH/pub?output=csv"}}
