--- a/themes/Markut/layouts/_default/list.html
+++ b/themes/Markut/layouts/_default/list.html
@@ -2,7 +2,7 @@
     {{ partial "head.html" . }}
     {{ partial "header.html" . }}
     <div class="container">
-        <header class="page-header markutcontent"><h1>{{ .Title }}</h1><div class="title list-inline-item"><a href="/tags">Etiketler Sayfasına Geri Dönün</a></div></header>
+        <header class="page-header markutcontent"><h1>{{ .Title }}</h1><div class="title list-inline-item"><a href="/tags/">Etiketler Sayfasına Geri Dönün</a></div></header>
         <div class="container toc">
             {{ range .Pages }}
             <article>
