--- a/themes/Markut/layouts/partials/header-sayi.html
+++ b/themes/Markut/layouts/partials/header-sayi.html
@@ -18,8 +18,8 @@
                sayı {{.Params.sayi}}
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="/sayi-1">Sayı 01</a>
-                <a class="dropdown-item" href="/sayi-0">Sayı 00</a>
+                <a class="dropdown-item" href="/sayi-1/">Sayı 01</a>
+                <a class="dropdown-item" href="/sayi-0/">Sayı 00</a>
               </div>
             </li>   
              <!-- Dropdown İçindekiler -->
