--- a/themes/Markut/layouts/partials/header.html
+++ b/themes/Markut/layouts/partials/header.html
@@ -1,6 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg fixed-top markutnav">
-      <a class="navbar-brand " href="{{.Site.BaseURL}}"><div class="logo">MARKUT</div></a>
+      <a class="navbar-brand " href="{{.Site.BaseURL}}"> {{ if .IsHome }}<h1 class="logo">MARKUT</h1>{{ else }}<div class="logo">MARKUT</div>{{ end }}</a>
+     
       <!--  Show this only on mobile to medium screens  -->
       <nav>
         <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
