optimizasyon ve instagram eklentisi

--- a/themes/Markut/layouts/kapak/single.html
+++ b/themes/Markut/layouts/kapak/single.html
@@ -13,7 +13,7 @@
               <div class="kapakok">↓</div>
             </div>
               <div class="col-md-6">
-                <div class="markutcover"><img class="img-fluid" src="{{.Params.kapak}}" alt=""></div>
+                <div class="markutcover"><img class="img-fluid" src="{{.Params.kapak}}" alt="Markut Sayı: {{.Params.Sayi}} Kapak Tasarımı"></div>
               </div>
             </div>
 </div>
