--- a/layouts/partials/comment.html
+++ b/layouts/partials/comment.html
@@ -1,6 +1,6 @@
 <h3 class="text-center">Markut Ekibinden Sevgiyle...</h3>
 <div class="mailde mb-5">
-        <img class="img-fluid" src="/img/markut-mailde.png" alt="">
+        <div class="col-md-5 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
         <div class="mailde-title">Dergimize Abone Olun</div>
         <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
         <form name="abonelik" method="POST" data-netlify="true" action="/basarili/">   
