--- a/themes/Markut/layouts/_default/single.html
+++ b/themes/Markut/layouts/_default/single.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="mailde">
-        <div class="col-md-5 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt=""></div>
+        <div class="col-md-5 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
         <div class="mailde-title">Dergimize Abone Olun</div>
         <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
         <form name="abonelik" method="POST" data-netlify="true" action="/basarili">   
