--- a/themes/Markut/layouts/index.html
+++ b/themes/Markut/layouts/index.html
@@ -33,7 +33,7 @@
         <div class="row markutsayi post {{ .Scratch.Get `postClass` }}">
                 <div class="col-md-6">
                 <div class="markutcvr">
-                        <a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.kapak}}" alt=""></a>
+                        <a href="{{ .Permalink }}"><img class="img-fluid" src="{{.Params.kapak}}" alt="Markut Sayı: {{.Params.Sayi}} Kapak Tasarımı"></a>
                 </div>
                 </div>
                 <div class="col-md-6">
@@ -53,7 +53,7 @@
         <div class="row mt-5">
          {{ range first 20 ( where ( where (.Site.Pages.ByParam "sayfa") ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
          <div class="col-md-6 mt-5"><article>    
-       <a href="{{ .Permalink }}"><img class="img-fluid thumb" src="{{.Params.thumb}}" alt="">     </a>    
+       <a href="{{ .Permalink }}"><img class="img-fluid thumb" src="{{.Params.thumb}}" alt="{{ .Title | markdownify }}"></a>    
         <a href="{{ .Permalink }}"><h2 class="title">{{ .Title | markdownify }}</h2></a>
         <p class="yazar">{{ .Params.yazar }} | {{.Params.tarih}}</p>
         <p class="desc">{{ .Params.aciklama | plainify | htmlUnescape }}</p>
@@ -63,7 +63,7 @@
  </div>
 </div>
 <div class="mailde">
-        <div class="col-md-5 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt=""></div>
+        <div class="col-md-5 m-auto"><img class="img-fluid" src="/img/markut-mailde.svg" alt="Markut Mailde İllustrasyon"></div>
         <div class="mailde-title">Dergimize Abone Olun</div>
         <div class="mailde-desc">Yeni Sayıları Mailinize Gönderelim</div>
         <form name="abonelik" method="POST" data-netlify="true" action="/basarili/">   
@@ -72,4 +72,5 @@
           <small>ücretsizdir.</small>
       </form>
 </div>
+{{.Content}}
 {{ partial "footer.html" . }}
