--- a/themes/Markut/static/css/styles.css
+++ b/themes/Markut/static/css/styles.css
@@ -192,6 +192,13 @@ h6 {
 	letter-spacing: 7px;
 	margin-top: -12px;
 }
+.underline{
+	color: #000000;
+	background-color:#f7c421;
+	box-shadow: 20px 15px   #c30000;
+	line-height: 10px;
+	padding: 10px;
+}
 .icsay{
 	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 32px;
@@ -526,13 +533,7 @@ footer a:hover{
 	margin-top: 100px;
 }
 
-.count{
-	font-family: 'Roboto Condensed', sans-serif;
-    font-size: 32px;
-    color: #ffffff;
-    margin-top: -30px;
-    text-shadow: -1px -1px 0 #000000, 1px -1px 0 #000000, -1px 1px 0 #000000, 1px 1px 0 #000000;
-}
+
 
 .mailde{
 	margin: 0 auto;
